@@ -148,15 +148,6 @@ bool CameraThumbsCtrl::getThumbInfo(const CamItemInfo& info, CachedItem& item) c
 
         item = *retrieveItemFromCache(info.url());
 
-        // Color Managed view rules.
-
-        if (IccSettings::instance()->useManagedPreviews())
-        {
-            QImage img  = item.second.toImage();
-            IccManager::transformForDisplay(img, static_d->profile);
-            item.second = QPixmap::fromImage(img);
-        }
-
         return true;
     }
     else if (!d->pendingItems.contains(info.url()))
@@ -186,6 +177,13 @@ void CameraThumbsCtrl::slotThumbInfo(const QString&, const QString& file, const 
     if (thumb.isNull())
     {
         thumbnail = d->controller->mimeTypeThumbnail(file).pixmap(ThumbnailSize::maxThumbsSize()).toImage();
+    }
+
+    // Color Managed view rules.
+
+    if (IccSettings::instance()->useManagedPreviews())
+    {
+        IccManager::transformForDisplay(thumbnail, static_d->profile);
     }
 
     putItemToCache(info.url(), info, QPixmap::fromImage(thumbnail));
