@@ -31,4 +31,5 @@ BUGFIXES FROM BUGZILLA:
 022 ==> 384399 - Getting dialog asking for "perform also on grouped images?" when no grouped images are selected.
 023 ==> 384424 - Same expression in both branches of ternary operator in DMetadata.
 024 ==> 369517 - digiKam from 5.7.0 tarball installs libvkontakte translations even if libvkontakte is disabled.
-025 ==> 
+025 ==> 384079 - High CPU usage on Import when color management is enabled.
+026 ==> 
